src/test/deca/context/valid/provided/test16.deca
{
    int x = 2;
    float b = 2.5;
    b = x;
}