src/test/deca/context/invalid/provided/double_define.deca
//Resultats :
//Erreur contextuelle
//Ligne 6: x is already used
{
int x = 2;
int x = 3;
}
